@@ -1,8 +1,23 @@
-FROM eclipse-temurin:17.0.5_8-jre-alpine
+FROM alpine:latest AS packager
 
-COPY target/*.jar /opt/app/application.jar
+RUN apk --no-cache add openjdk11-jdk openjdk11-jmods
 
-RUN addgroup -S spring && adduser -S spring -G spring
-USER spring:spring
+ENV JAVA_MINIMAL="/opt/java-minimal"
 
-CMD java -jar /opt/app/application.jar
+# build minimal JRE
+RUN /usr/lib/jvm/java-11-openjdk/bin/jlink \
+    --verbose \
+    --add-modules \
+        java.base,java.sql,java.naming,java.desktop,java.management,java.security.jgss,java.instrument \
+    --compress 2 --strip-debug --no-header-files --no-man-pages \
+    --output "$JAVA_MINIMAL"
+
+FROM alpine
+
+ENV JAVA_HOME=/opt/java-minimal
+ENV PATH="$PATH:$JAVA_HOME/bin"
+
+COPY --from=packager "$JAVA_HOME" "$JAVA_HOME"
+COPY target/*.jar app.jar
+
+ENTRYPOINT ["java","-jar","/app.jar"]
